- fixed armor row columns displayed/alignment if armor is marked as "magical" and Equipment tab was filtered to show "Magic" items only.

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -2498,7 +2498,8 @@ section.npc-box.statblock3 .image-avatar {
 }
 
 /* needed as a placeholder for when all types of equipment are displayed */
-.charsheet .equipment-display-type[value='-1'] ~ .repcontainer .equipment-type[value='2'] ~ .hidden-for-armor {
+.charsheet .equipment-display-type[value='-1'] ~ .repcontainer .equipment-type[value='2'] ~ .hidden-for-armor,
+.charsheet .equipment-display-type[value='3'] ~ .repcontainer .equipment-type[value='2'] ~ .hidden-for-armor {
   display: block;
   opacity: 0;
   pointer-events: none;
